# wego_prac

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/limo_ros2_application/lib/limo_ros2_application/: detect_line  detect_object  dl_detect_line  drive_through_pose  lets_take_a_picture  limo_control  limo_e_stop  move_limo  (+3 more)
log/: latest_build
src/dl_ros2_application/: package.xml  setup.cfg  setup.py
src/dl_ros2_application/dl_ros2_application/: dl_control.py  emergency_stop.py  take_a_picture.py  tf_to_trt_runner.py  tf_track_detect.py  trt_track_detect.py  yolo_export_runner.py  yolo_labeler.py  yolo_object_detect.py
src/dl_ros2_application/launch/: dl_track_application.launch (copy).py  dl_track_application.launch.py
src/dl_ros2_application/params/: params.yaml
src/dl_ros2_application/script/: tf_to_trt.sh  yolo_export.sh
src/dl_ros2_msgs/: CMakeLists.txt  package.xml
src/dl_ros2_msgs/msg/: BoundingBox.msg  BoundingBoxes.msg  Control.msg
src/dl_ros2_msgs/srv/: PhotoShoot.srv
src/lift_ctr/: CMakeLists.txt  package.xml
src/lift_ctr/include/: lift_ctr.cpp
src/lift_ctr/include/lift_ctr/: lift_ctr.hpp
src/lift_ctr/launch/: dual_lift.launch.py  mono_lift.launch.py
src/lift_ctr/params/: dual_lift.yaml  mono_lift.yaml
src/lift_ctr/src/: lift_ctr_node.cpp
src/limo_ros2/limo_base/: CMakeLists.txt
src/limo_ros2/limo_msgs/: CMakeLists.txt  package.xml:Zone.Identifier
src/limo_ros2_application/: package.xml  setup.cfg  setup.py
src/limo_ros2_application/launch/: move_to_pose_launch.py
src/limo_ros2_application/limo_ros2_application/: limo_e_stop.py  move_to_pose.py
src/limo_ros2_application/params/: detect_line.yaml  limo_control.yaml  move_to_pose.yaml
src/limo_ros2_application/rviz/: move_to_pose.rviz
src/robot_localization/launch/: limo_ekf_launch.py
src/robot_localization/params/: limo_ekf.yaml
src/wego/: CMakeLists.txt  package.xml
src/wego/config/: limo_lds_2d.lua
src/wego/launch/: camera_tilt_launch.py  cartographer_launch.py  navigation_diff_launch.py  occupancy_grid_launch.py  teleop_launch.py
src/wego/rviz/: display.rviz
src/wego_2d_nav/: CMakeLists.txt  package.xml
src/wego_2d_nav/launch/: localization_launch.py  navigation_only_launch.py
src/wego_2d_nav/maps/: map.pgm  map.yaml
src/wego_2d_nav/params/: diff_navigation_params copy.yaml  diff_navigation_params.yaml
src/wego_ez/: package.xml  setup.cfg  setup.py
src/wego_ez/launch/: wego_ez_launch.py  wego_ez_launch_edited.py
src/wego_ez/wego_ez/: lidar.py  lidar_edited.py  main.py  motor.py  setup_edited.py
src/wego_ez2/: package.xml  setup.cfg  setup.py
src/wego_ez2/launch/: ackerman_move_support_launch.py  wego_ez_launch.py
src/wego_ez2/wego_ez/: scan_roi_filter.py
src/wego_ez2/wego_ez2/: main.py  motor.py  move_to_pose.py  setup2.py  twist_to_ackermann.py
src/wego_msgs/: CMakeLists.txt  package.xml
src/wego_msgs/srv/: Chalkak.srv
src/ydlidar_ros2_driver/: initenv.sh
src/ydlidar_ros2_driver/launch/: ydlidar.launch.py
src/ydlidar_ros2_driver/params/: ydlidar.yaml
wego_ez/: setup.py
wego_ez/wego_ez/: __init__.py
(+335 files in other folders)
